# allpath-agent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  AUTOMATIONS.md  BUDGETS_AND_LOGS.md  CONNECTORS.md  CONVERSATIONAL_MODEL_SETUP.md  FAILURE_RECOVERY.md  INSTALLATION.md  MVP_PLAN.md  NEXT_PHASE_PLAN.md  PRODUCT_DESIGN.md  PROVIDERS.md  VALIDATION.md
release_notes/: v0.1.0.md
scripts/: install.sh  run_tests.py
src/allpath_agent/: __init__.py  application.py  automations.py  config.py  gateway_service.py  observability.py  provider_runtime.py  secrets.py
src/allpath_agent/agent/: __init__.py  budget.py  loop.py
src/allpath_agent/cli/: __init__.py  account_auth.py  approvals.py  banner.py  main.py  selector.py
src/allpath_agent/connectors/: __init__.py  contracts.py  diagnostics.py  runtime.py  slack.py  telegram.py  whatsapp.py
src/allpath_agent/curriculum/: __init__.py  catalog.py  engine.py  service.py
src/allpath_agent/models/: __init__.py  anthropic.py  catalog.py  codex_cli.py  external_cli.py  gemini.py  (+5 more)
tests/: test_account_auth.py  test_agent_loop.py  test_automations.py  test_banner.py  test_budget.py  test_cli.py  test_config.py  test_connection_workflow.py  test_connector_diagnostics.py  test_connectors.py  test_curriculum.py  test_gateway_service.py  test_installer.py  test_model_catalog.py  test_model_router.py  test_observability.py  test_provider.py  test_provider_runtime.py  test_slack_workflow.py  test_storage.py  test_telegram_workflow.py  test_tools.py  test_whatsapp_workflow.py
(+16 files in other folders)
