[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "allpath-agent"
version = "0.1.0"
description = "A small personal agent with progressive capability discovery and model routing"
requires-python = ">=3.11"
dependencies = ["slack_sdk>=3.0,<4"]

[project.scripts]
allpath-agent = "allpath_agent.cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
